notebook refined for submission

--- a/Notebooks_For_submission/1 Transfer learning with VGG16(VGGFACE) + Attention + avg pooling on fer2013.ipynb
+++ b/Notebooks_For_submission/1 Transfer learning with VGG16(VGGFACE) + Attention + avg pooling on fer2013.ipynb
@@ -409,6 +409,86 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Image Data Generator setup\n",
+    "train_datagen = ImageDataGenerator(rescale=1./255,\n",
+    "                                   featurewise_center=False,\n",
+    "                                   featurewise_std_normalization=False,\n",
+    "                                   rotation_range=30,\n",
+    "                                   width_shift_range=0.1,\n",
+    "                                   height_shift_range=0.1,\n",
+    "                                   zoom_range=0.1,\n",
+    "                                   horizontal_flip=True\n",
+    "                                   )\n",
+    "validation_datagen = ImageDataGenerator(rescale=1./255)\n",
+    "test_datagen = ImageDataGenerator(rescale=1./255)\n",
+    "train_generator = train_datagen.flow_from_directory(\n",
+    "    train_dir,\n",
+    "    target_size = (img_height,img_width),\n",
+    "    batch_size = 50,\n",
+    "    shuffle = True,\n",
+    "    class_mode='categorical'\n",
+    ")\n",
+    "validation_generator = validation_datagen.flow_from_directory(\n",
+    "    validation_dir,\n",
+    "    target_size = (img_height,img_width),\n",
+    "    batch_size = 50,\n",
+    "    class_mode = 'categorical'\n",
+    ")\n",
+    "test_generator = test_datagen.flow_from_directory(\n",
+    "    test_dir,\n",
+    "    target_size = (img_height,img_width),\n",
+    "    batch_size = 50,\n",
+    "    class_mode = 'categorical'\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(train_generator.class_indices)\n",
+    "print(validation_generator.class_indices)\n",
+    "print(test_generator.class_indices)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def class_weight_computer():\n",
+    "  \"\"\"\n",
+    "    Training Data categories and number of samples in them\n",
+    "    Angry: 3995\n",
+    "    Disgust: 436\n",
+    "    Fear: 4097\n",
+    "    Happy: 7215\n",
+    "    Neutral: 4965\n",
+    "    Sad: 4830\n",
+    "    Surprise: 3171\n",
+    "  \"\"\"\n",
+    "  samples_per_label = [3995, 436, 4097, 7215, 4965, 4830, 3171]\n",
+    "  total_samples = sum(samples_per_label)\n",
+    "  return dict([(i, total_samples/(7*j)) for (i,j) in enumerate(samples_per_label)]) # https://scikit-learn.org/stable/modules/generated/sklearn.utils.class_weight.compute_class_weight.html\n",
+    "class_weights = class_weight_computer()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Loading the pretrained model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -513,6 +593,13 @@
    "outputs": [],
    "source": [
     "conv_base.summary()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Adding Attention network + Classifier on top of pretrained network"
    ]
   },
   {
@@ -694,141 +781,6 @@
      "base_uri": "https://localhost:8080/"
     },
     "executionInfo": {
-     "elapsed": 2905,
-     "status": "ok",
-     "timestamp": 1606459038269,
-     "user": {
-      "displayName": "Adarsh Ghimire",
-      "photoUrl": "https://lh3.googleusercontent.com/a-/AOh14GiJ9rHrsqUAXXZP8Syzv-mcB6GhQzMybMiiiSFyKw=s64",
-      "userId": "03649801403498526934"
-     },
-     "user_tz": -240
-    },
-    "id": "Agblokee2ABa",
-    "outputId": "1c4b4c8a-776f-456a-89c7-89a3c0b28ded"
-   },
-   "outputs": [],
-   "source": [
-    "# Image Data Generator setup\n",
-    "train_datagen = ImageDataGenerator(rescale=1./255,\n",
-    "                                   featurewise_center=False,\n",
-    "                                   featurewise_std_normalization=False,\n",
-    "                                   rotation_range=30,\n",
-    "                                   width_shift_range=0.1,\n",
-    "                                   height_shift_range=0.1,\n",
-    "                                   zoom_range=0.1,\n",
-    "                                   horizontal_flip=True\n",
-    "                                   )\n",
-    "validation_datagen = ImageDataGenerator(rescale=1./255)\n",
-    "test_datagen = ImageDataGenerator(rescale=1./255)\n",
-    "train_generator = train_datagen.flow_from_directory(\n",
-    "    train_dir,\n",
-    "    target_size = (img_height,img_width),\n",
-    "    batch_size = 50,\n",
-    "    shuffle = True,\n",
-    "    class_mode='categorical'\n",
-    ")\n",
-    "validation_generator = validation_datagen.flow_from_directory(\n",
-    "    validation_dir,\n",
-    "    target_size = (img_height,img_width),\n",
-    "    batch_size = 50,\n",
-    "    class_mode = 'categorical'\n",
-    ")\n",
-    "test_generator = test_datagen.flow_from_directory(\n",
-    "    test_dir,\n",
-    "    target_size = (img_height,img_width),\n",
-    "    batch_size = 50,\n",
-    "    class_mode = 'categorical'\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "executionInfo": {
-     "elapsed": 1670,
-     "status": "ok",
-     "timestamp": 1606459038929,
-     "user": {
-      "displayName": "Adarsh Ghimire",
-      "photoUrl": "https://lh3.googleusercontent.com/a-/AOh14GiJ9rHrsqUAXXZP8Syzv-mcB6GhQzMybMiiiSFyKw=s64",
-      "userId": "03649801403498526934"
-     },
-     "user_tz": -240
-    },
-    "id": "J0Sy9nUvkPwB",
-    "outputId": "28de4a6b-a3c6-476d-e195-ab468b8f57df"
-   },
-   "outputs": [],
-   "source": [
-    "print(train_generator.class_indices)\n",
-    "print(validation_generator.class_indices)\n",
-    "print(test_generator.class_indices)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "0SomQdBcc5ag"
-   },
-   "outputs": [],
-   "source": [
-    "def class_weight_computer():\n",
-    "  \"\"\"\n",
-    "    Training Data categories and number of samples in them\n",
-    "    Angry: 3995\n",
-    "    Disgust: 436\n",
-    "    Fear: 4097\n",
-    "    Happy: 7215\n",
-    "    Neutral: 4965\n",
-    "    Sad: 4830\n",
-    "    Surprise: 3171\n",
-    "  \"\"\"\n",
-    "  samples_per_label = [3995, 436, 4097, 7215, 4965, 4830, 3171]\n",
-    "  total_samples = sum(samples_per_label)\n",
-    "  return dict([(i, total_samples/(7*j)) for (i,j) in enumerate(samples_per_label)]) # https://scikit-learn.org/stable/modules/generated/sklearn.utils.class_weight.compute_class_weight.html"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "executionInfo": {
-     "elapsed": 2605,
-     "status": "ok",
-     "timestamp": 1606459045859,
-     "user": {
-      "displayName": "Adarsh Ghimire",
-      "photoUrl": "https://lh3.googleusercontent.com/a-/AOh14GiJ9rHrsqUAXXZP8Syzv-mcB6GhQzMybMiiiSFyKw=s64",
-      "userId": "03649801403498526934"
-     },
-     "user_tz": -240
-    },
-    "id": "sek0B0A84L9G",
-    "outputId": "cbf3a4e1-dee6-4e7c-f151-a1c45f13192f"
-   },
-   "outputs": [],
-   "source": [
-    "class_weights = class_weight_computer()\n",
-    "print(class_weights)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "executionInfo": {
      "elapsed": 3803343,
      "status": "ok",
      "timestamp": 1606462859027,
@@ -984,7 +936,7 @@
    "outputs": [],
    "source": [
     "# Saving the model\n",
-    "model.save(\"drive/My Drive/ENGR635-Deep Learning System Design Project/Models/VGG16_VGGFACE_Attention/\" + 'VGG16_VGG_FACE_Attention_cbam' + epoch_str + val_acc + '.h5')"
+    "model.save(\"drive/My Drive/ENGR635-Deep Learning System Design Project/Models/VGG16_VGGFACE_Attention/\" + 'VGG16_VGG_FACE_Attention' + epoch_str + val_acc + '.h5')"
    ]
   },
   {
@@ -1003,6 +955,23 @@
    },
    "source": [
     "### Only last layer of VGG16"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Image generators and data preparation codes are pre-loaded before the below session"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from keras.models import load_model\n",
+    "model = load_model(\"drive/My Drive/ENGR635-Deep Learning System Design Project/Models/VGG16_VGGFACE_Attention/VGG16_VGG_FACE_Attention-EPOCHS_50_val_acc_0.457.h5\")"
    ]
   },
   {
@@ -1248,6 +1217,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Image generators and data preparation codes are pre-loaded before the below session"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from keras.models import load_model\n",
+    "model = load_model(\"drive/My Drive/ENGR635-Deep Learning System Design Project/Models/VGG16_VGGFACE_Attention/VGG16_VGG_FACE_attention_finetuned-EPOCHS_50_val_acc_0.688.h5\")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -1487,6 +1473,23 @@
    },
    "source": [
     "### Choosing last 3 layers of VGG16"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Image generators and data preparation codes are pre-loaded before the below session"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from keras.models import load_model\n",
+    "model = load_model(\"drive/My Drive/ENGR635-Deep Learning System Design Project/Models/VGG16_VGGFACE_Attention/VGG16_VGG_FACE_attention_finetuned-EPOCHS_50_val_acc_0.701.h5\")"
    ]
   },
   {
