--- a/Notebooks_For_submission/1 Transfer learning with VGG16(VGGFACE) + avg pooling on fer2013.ipynb
+++ b/Notebooks_For_submission/1 Transfer learning with VGG16(VGGFACE) + avg pooling on fer2013.ipynb
@@ -224,6 +224,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Setting up Image generator with data augmentation"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -234,6 +241,87 @@
     "# Setting image height and width\n",
     "img_height = 224\n",
     "img_width = 224"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Image Data Generator setup\n",
+    "batch_size = 50\n",
+    "train_datagen = ImageDataGenerator(rescale=1./255,\n",
+    "                                   featurewise_center=False,\n",
+    "                                   featurewise_std_normalization=False,\n",
+    "                                   rotation_range=30,\n",
+    "                                   width_shift_range=0.1,\n",
+    "                                   height_shift_range=0.1,\n",
+    "                                   zoom_range=0.1,\n",
+    "                                   horizontal_flip=True\n",
+    "                                   )\n",
+    "validation_datagen = ImageDataGenerator(rescale=1./255)\n",
+    "test_datagen = ImageDataGenerator(rescale=1./255)\n",
+    "train_generator = train_datagen.flow_from_directory(\n",
+    "    train_dir,\n",
+    "    target_size = (img_height, img_width),\n",
+    "    batch_size = batch_size,\n",
+    "    shuffle = True,\n",
+    "    class_mode='categorical'\n",
+    ")\n",
+    "validation_generator = validation_datagen.flow_from_directory(\n",
+    "    validation_dir,\n",
+    "    target_size = (img_height, img_width),\n",
+    "    batch_size = batch_size,\n",
+    "    class_mode = 'categorical'\n",
+    ")\n",
+    "test_generator = test_datagen.flow_from_directory(\n",
+    "    test_dir,\n",
+    "    target_size = (img_height, img_width),\n",
+    "    batch_size = batch_size,\n",
+    "    class_mode = 'categorical'\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(train_generator.class_indices)\n",
+    "print(validation_generator.class_indices)\n",
+    "print(test_generator.class_indices)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def class_weight_computer():\n",
+    "  \"\"\"\n",
+    "    Training Data categories and number of samples in them\n",
+    "    Angry: 3995\n",
+    "    Disgust: 436\n",
+    "    Fear: 4097\n",
+    "    Happy: 7215\n",
+    "    Neutral: 4965\n",
+    "    Sad: 4830\n",
+    "    Surprise: 3171\n",
+    "  \"\"\"\n",
+    "  samples_per_label = [3995, 436, 4097, 7215, 4965, 4830, 3171]\n",
+    "  total_samples = sum(samples_per_label)\n",
+    "  return dict([(i, total_samples/(7*j)) for (i,j) in enumerate(samples_per_label)]) # https://scikit-learn.org/stable/modules/generated/sklearn.utils.class_weight.compute_class_weight.html\n",
+    "class_weights = class_weight_computer()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Loading the pretrained model"
    ]
   },
   {
@@ -361,83 +449,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "Agblokee2ABa"
-   },
-   "outputs": [],
-   "source": [
-    "# Image Data Generator setup\n",
-    "batch_size = 50\n",
-    "train_datagen = ImageDataGenerator(rescale=1./255,\n",
-    "                                   featurewise_center=False,\n",
-    "                                   featurewise_std_normalization=False,\n",
-    "                                   rotation_range=30,\n",
-    "                                   width_shift_range=0.1,\n",
-    "                                   height_shift_range=0.1,\n",
-    "                                   zoom_range=0.1,\n",
-    "                                   horizontal_flip=True\n",
-    "                                   )\n",
-    "validation_datagen = ImageDataGenerator(rescale=1./255)\n",
-    "test_datagen = ImageDataGenerator(rescale=1./255)\n",
-    "train_generator = train_datagen.flow_from_directory(\n",
-    "    train_dir,\n",
-    "    target_size = (img_height, img_width),\n",
-    "    batch_size = batch_size,\n",
-    "    shuffle = True,\n",
-    "    class_mode='categorical'\n",
-    ")\n",
-    "validation_generator = validation_datagen.flow_from_directory(\n",
-    "    validation_dir,\n",
-    "    target_size = (img_height, img_width),\n",
-    "    batch_size = batch_size,\n",
-    "    class_mode = 'categorical'\n",
-    ")\n",
-    "test_generator = test_datagen.flow_from_directory(\n",
-    "    test_dir,\n",
-    "    target_size = (img_height, img_width),\n",
-    "    batch_size = batch_size,\n",
-    "    class_mode = 'categorical'\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "J0Sy9nUvkPwB"
-   },
-   "outputs": [],
-   "source": [
-    "print(train_generator.class_indices)\n",
-    "print(validation_generator.class_indices)\n",
-    "print(test_generator.class_indices)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "id": "0SomQdBcc5ag"
    },
-   "outputs": [],
    "source": [
-    "def class_weight_computer():\n",
-    "  \"\"\"\n",
-    "    Training Data categories and number of samples in them\n",
-    "    Angry: 3995\n",
-    "    Disgust: 436\n",
-    "    Fear: 4097\n",
-    "    Happy: 7215\n",
-    "    Neutral: 4965\n",
-    "    Sad: 4830\n",
-    "    Surprise: 3171\n",
-    "  \"\"\"\n",
-    "  samples_per_label = [3995, 436, 4097, 7215, 4965, 4830, 3171]\n",
-    "  total_samples = sum(samples_per_label)\n",
-    "  return dict([(i, total_samples/(7*j)) for (i,j) in enumerate(samples_per_label)]) # https://scikit-learn.org/stable/modules/generated/sklearn.utils.class_weight.compute_class_weight.html\n",
-    "class_weights = class_weight_computer()"
+    "### Adding Classifier on top of pretrained network"
    ]
   },
   {
@@ -556,7 +573,7 @@
    "outputs": [],
    "source": [
     "# Saving the model\n",
-    "model.save(\"drive/My Drive/ENGR635-Deep Learning System Design Project/Models/VGG16_VGGFACE/\" + 'VGG16_VGG_FACE' + epoch_str + val_acc + '.h5')"
+    "model.save(\"drive/My Drive/ENGR635-Deep Learning System Design Project/Models/VGG16_VGGFACE/\" + 'VGG16_VGG_FACE_avgpool' + epoch_str + val_acc + '.h5')"
    ]
   },
   {
@@ -584,6 +601,23 @@
    },
    "source": [
     "### Fine tuning the last convolutional layer"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Image generators and data preparation codes are pre-loaded before the below session"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from keras.models import load_model\n",
+    "model = load_model(\"drive/My Drive/ENGR635-Deep Learning System Design Project/Models/VGG16_VGGFACE/VGG16_VGG_FACE_avgpool-EPOCHS_50_val_acc_0.438.h5\")"
    ]
   },
   {
@@ -797,6 +831,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Image generators and data preparation codes are pre-loaded before the below session"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from keras.models import load_model\n",
+    "model = load_model(\"drive/My Drive/ENGR635-Deep Learning System Design Project/Models/VGG16_VGGFACE/VGG16_VGG_FACE_avgpool_FineTune-EPOCHS_50_valacc_0.657.h5\")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -1004,6 +1055,23 @@
    },
    "source": [
     "### Fine tuning last three layers"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Image generators and data preparation codes are pre-loaded before the below session"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from keras.models import load_model\n",
+    "model = load_model(\"drive/My Drive/ENGR635-Deep Learning System Design Project/Models/VGG16_VGGFACE/VGG16_VGG_FACE_avgpool_FineTune-EPOCHS_50_valacc_0.677.h5\")"
    ]
   },
   {
