--- a/Notebooks_For_submission/1 Transfer learning with VGG16(VGGFACE) + flatten on fer2013.ipynb
+++ b/Notebooks_For_submission/1 Transfer learning with VGG16(VGGFACE) + flatten on fer2013.ipynb
@@ -225,6 +225,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Setting up Image generator with data augmentation"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -235,6 +242,87 @@
     "# Image height and width initialization\n",
     "img_height = 224\n",
     "img_height = 224"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Image Data Generator setup\n",
+    "batch_size = 50\n",
+    "train_datagen = ImageDataGenerator(rescale=1./255,\n",
+    "                                   featurewise_center=False,\n",
+    "                                   featurewise_std_normalization=False,\n",
+    "                                   rotation_range=30,\n",
+    "                                   width_shift_range=0.1,\n",
+    "                                   height_shift_range=0.1,\n",
+    "                                   zoom_range=0.1,\n",
+    "                                   horizontal_flip=True\n",
+    "                                   )\n",
+    "validation_datagen = ImageDataGenerator(rescale=1./255)\n",
+    "test_datagen = ImageDataGenerator(rescale=1./255)\n",
+    "train_generator = train_datagen.flow_from_directory(\n",
+    "    train_dir,\n",
+    "    target_size = (img_height, img_width),\n",
+    "    batch_size = batch_size,\n",
+    "    shuffle = True,\n",
+    "    class_mode='categorical'\n",
+    ")\n",
+    "validation_generator = validation_datagen.flow_from_directory(\n",
+    "    validation_dir,\n",
+    "    target_size = (img_height, img_width),\n",
+    "    batch_size = batch_size,\n",
+    "    class_mode = 'categorical'\n",
+    ")\n",
+    "test_generator = test_datagen.flow_from_directory(\n",
+    "    test_dir,\n",
+    "    target_size = (img_height, img_width),\n",
+    "    batch_size = batch_size,\n",
+    "    class_mode = 'categorical'\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(train_generator.class_indices)\n",
+    "print(validation_generator.class_indices)\n",
+    "print(test_generator.class_indices)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def class_weight_computer():\n",
+    "  \"\"\"\n",
+    "    Training Data categories and number of samples in them\n",
+    "    Angry: 3995\n",
+    "    Disgust: 436\n",
+    "    Fear: 4097\n",
+    "    Happy: 7215\n",
+    "    Neutral: 4965\n",
+    "    Sad: 4830\n",
+    "    Surprise: 3171\n",
+    "  \"\"\"\n",
+    "  samples_per_label = [3995, 436, 4097, 7215, 4965, 4830, 3171]\n",
+    "  total_samples = sum(samples_per_label)\n",
+    "  return dict([(i, total_samples/(7*j)) for (i,j) in enumerate(samples_per_label)]) # https://scikit-learn.org/stable/modules/generated/sklearn.utils.class_weight.compute_class_weight.html\n",
+    "class_weights = class_weight_computer()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Loading pretrained model"
    ]
   },
   {
@@ -333,6 +421,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Adding Classifier on top of pretrained network"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -369,90 +464,11 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "id": "Agblokee2ABa"
-   },
-   "outputs": [],
-   "source": [
-    "# Image Data Generator setup\n",
-    "batch_size = 50\n",
-    "train_datagen = ImageDataGenerator(rescale=1./255,\n",
-    "                                   featurewise_center=False,\n",
-    "                                   featurewise_std_normalization=False,\n",
-    "                                   rotation_range=30,\n",
-    "                                   width_shift_range=0.1,\n",
-    "                                   height_shift_range=0.1,\n",
-    "                                   zoom_range=0.1,\n",
-    "                                   horizontal_flip=True\n",
-    "                                   )\n",
-    "validation_datagen = ImageDataGenerator(rescale=1./255)\n",
-    "test_datagen = ImageDataGenerator(rescale=1./255)\n",
-    "train_generator = train_datagen.flow_from_directory(\n",
-    "    train_dir,\n",
-    "    target_size = (img_height, img_width),\n",
-    "    batch_size = batch_size,\n",
-    "    shuffle = True,\n",
-    "    class_mode='categorical'\n",
-    ")\n",
-    "validation_generator = validation_datagen.flow_from_directory(\n",
-    "    validation_dir,\n",
-    "    target_size = (img_height, img_width),\n",
-    "    batch_size = batch_size,\n",
-    "    class_mode = 'categorical'\n",
-    ")\n",
-    "test_generator = test_datagen.flow_from_directory(\n",
-    "    test_dir,\n",
-    "    target_size = (img_height, img_width),\n",
-    "    batch_size = batch_size,\n",
-    "    class_mode = 'categorical'\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "J0Sy9nUvkPwB"
-   },
-   "outputs": [],
-   "source": [
-    "print(train_generator.class_indices)\n",
-    "print(validation_generator.class_indices)\n",
-    "print(test_generator.class_indices)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "vbEJtJtRxtM0"
-   },
-   "outputs": [],
-   "source": [
-    "def class_weight_computer():\n",
-    "  \"\"\"\n",
-    "    Training Data categories and number of samples in them\n",
-    "    Angry: 3995\n",
-    "    Disgust: 436\n",
-    "    Fear: 4097\n",
-    "    Happy: 7215\n",
-    "    Neutral: 4965\n",
-    "    Sad: 4830\n",
-    "    Surprise: 3171\n",
-    "  \"\"\"\n",
-    "  samples_per_label = [3995, 436, 4097, 7215, 4965, 4830, 3171]\n",
-    "  total_samples = sum(samples_per_label)\n",
-    "  return dict([(i, total_samples/(7*j)) for (i,j) in enumerate(samples_per_label)]) # https://scikit-learn.org/stable/modules/generated/sklearn.utils.class_weight.compute_class_weight.html\n",
-    "class_weights = class_weight_computer()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
     "id": "kyDmy4jw2AB3"
    },
    "outputs": [],
    "source": [
+    "# Model Training\n",
     "EPOCHS = 50\n",
     "training_samples = 28709\n",
     "validation_samples = 3589\n",
@@ -582,148 +598,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "AvMHz69-Q_c_"
-   },
-   "outputs": [],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "model.summary()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "VvMg3rm5RFi9"
-   },
-   "outputs": [],
-   "source": [
-    "# Choosing last convolutional blocks of VGG16 to trainable as well for fine tuning\n",
-    "set_trainable = False\n",
-    "for layer in model.layers:\n",
-    "  if layer.name == \"conv5_3\":\n",
-    "    set_trainable = True\n",
-    "  if set_trainable:\n",
-    "    layer.trainable = True\n",
-    "  else:\n",
-    "    layer.trainable = False"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "9GQv6JzPSE2Y"
-   },
-   "outputs": [],
-   "source": [
-    "reduce_lr = ReduceLROnPlateau(monitor='val_loss', factor=0.5, patience=10, min_lr=0.00001)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "_IzUxBoaRo_C"
-   },
-   "outputs": [],
-   "source": [
-    "model.compile(optimizer=optimizers.Adam(learning_rate=0.0001), loss='categorical_crossentropy', metrics=['accuracy'])\n",
-    "model.summary()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "vGa5Qy9uRrZL"
-   },
-   "outputs": [],
-   "source": [
-    "EPOCHS = 50\n",
-    "training_samples = 28709\n",
-    "validation_samples = 3589\n",
-    "test_samples = 3589\n",
-    "history = model.fit_generator(\n",
-    "    train_generator,\n",
-    "    steps_per_epoch=training_samples//batch_size,\n",
-    "    epochs=EPOCHS,\n",
-    "    validation_data=validation_generator,\n",
-    "    validation_steps=validation_samples//batch_size,\n",
-    "    shuffle=True,\n",
-    "    class_weight=class_weights,\n",
-    "    callbacks=[reduce_lr]\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "3IaKe506SGpD"
-   },
-   "outputs": [],
-   "source": [
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "acc = history.history['accuracy']\n",
-    "loss = history.history['loss']\n",
-    "\n",
-    "val_acc = history.history['val_accuracy']\n",
-    "val_loss = history.history['val_loss']\n",
-    "\n",
-    "epochs = range(1, len(acc)+1)\n",
-    "\n",
-    "plt.plot(epochs, acc, 'r', label=\"Training accuracy\")\n",
-    "plt.plot(epochs, val_acc, 'b', label=\"Validation accuracy\")\n",
-    "plt.title('Training and Validation Accuracy while fine tuning VGG16 trained on VGGFACE2')\n",
-    "plt.legend()\n",
-    "\n",
-    "plt.figure()\n",
-    "plt.plot(epochs, loss, 'r', label=\"Training Loss\")\n",
-    "plt.plot(epochs, val_loss, 'b', label=\"Validation Loss\")\n",
-    "plt.title('Training and Validation Loss while fine tuning VGG16 trained on VGGFACE2')\n",
-    "plt.legend()\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "EaiP7mIEgnmv"
-   },
-   "outputs": [],
-   "source": [
-    "print('\\nEvaluate on Validation data')\n",
-    "results_validation = model.evaluate_generator(validation_generator, validation_samples//batch_size)\n",
-    "print('Validation loss, Validation Accuracy:', results_validation)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "NyLHQRapg0i8"
-   },
-   "outputs": [],
-   "source": [
-    "epoch_str = '-EPOCHS_' + str(EPOCHS)\n",
-    "val_acc = 'val_acc_%.3f' % results_validation[1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "4xLYGco6g5JO"
-   },
-   "outputs": [],
-   "source": [
-    "# Saving the model\n",
-    "model.save(\"drive/My Drive/ENGR635-Deep Learning System Design Project/Models/VGG16_VGGFACE/\" + 'VGG16_VGG_FACE_flatten_finetuned' + epoch_str + val_acc + '.h5')"
+    "Image generators and data preparation codes are pre-loaded before the below session"
    ]
   },
   {
@@ -731,7 +609,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from keras.models import load_model\n",
+    "model = load_model(\"drive/My Drive/ENGR635-Deep Learning System Design Project/Models/VGG16_VGGFACE/VGG16_VGG_FACE_flatten-EPOCHS_50val_acc_0.388.h5\")"
+   ]
   },
   {
    "cell_type": "code",
@@ -888,6 +769,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from keras.models import load_model\n",
+    "model = load_model(\"drive/My Drive/ENGR635-Deep Learning System Design Project/Models/VGG16_VGGFACE/VGG16_VGG_FACE_flatten-EPOCHS_50val_acc_0.558.h5\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "id": "AvMHz69-Q_c_"
    },
@@ -946,6 +837,7 @@
    },
    "outputs": [],
    "source": [
+    "# Model training\n",
     "EPOCHS = 50\n",
     "training_samples = 28709\n",
     "validation_samples = 3589\n",
@@ -1040,6 +932,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from keras.models import load_model\n",
+    "model = load_model(\"drive/My Drive/ENGR635-Deep Learning System Design Project/Models/VGG16_VGGFACE/VGG16_VGG_FACE_flatten-EPOCHS_50val_acc_0.583.h5\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "id": "AvMHz69-Q_c_"
    },
@@ -1098,6 +1000,7 @@
    },
    "outputs": [],
    "source": [
+    "# Model training\n",
     "EPOCHS = 50\n",
     "training_samples = 28709\n",
     "validation_samples = 3589\n",
