--- a/Notebooks_For_submission/1 Small CNN on fer2013.ipynb
+++ b/Notebooks_For_submission/1 Small CNN on fer2013.ipynb
@@ -178,6 +178,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Setting up image generator with data augmentation"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -188,6 +195,90 @@
     "# Image height and width initialization\n",
     "img_height = 224\n",
     "img_width = 224"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Image Data Generator setup\n",
+    "batch_size = 50\n",
+    "train_datagen = ImageDataGenerator(rescale=1./255,\n",
+    "                                   featurewise_center=False,\n",
+    "                                   featurewise_std_normalization=False,\n",
+    "                                   rotation_range=30,\n",
+    "                                   width_shift_range=0.1,\n",
+    "                                   height_shift_range=0.1,\n",
+    "                                   zoom_range=0.1,\n",
+    "                                   horizontal_flip=True\n",
+    "                                   )\n",
+    "validation_datagen = ImageDataGenerator(rescale=1./255)\n",
+    "test_datagen = ImageDataGenerator(rescale=1./255)\n",
+    "train_generator = train_datagen.flow_from_directory(\n",
+    "    train_dir,\n",
+    "    target_size = (img_height, img_width),\n",
+    "    batch_size = batch_size,\n",
+    "    shuffle = True,\n",
+    "    class_mode='categorical'\n",
+    ")\n",
+    "validation_generator = validation_datagen.flow_from_directory(\n",
+    "    validation_dir,\n",
+    "    target_size = (img_height, img_width),\n",
+    "    batch_size = batch_size,\n",
+    "    class_mode = 'categorical'\n",
+    ")\n",
+    "test_generator = test_datagen.flow_from_directory(\n",
+    "    test_dir,\n",
+    "    target_size = (img_height, img_width),\n",
+    "    batch_size = batch_size,\n",
+    "    class_mode = 'categorical'\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(train_generator.class_indices)\n",
+    "print(validation_generator.class_indices)\n",
+    "print(test_generator.class_indices)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def class_weight_computer():\n",
+    "  \"\"\"\n",
+    "  This function generates the class weights based on training data.\n",
+    "  \n",
+    "    Training Data categories and number of samples in them\n",
+    "    Angry: 3995\n",
+    "    Disgust: 436\n",
+    "    Fear: 4097\n",
+    "    Happy: 7215\n",
+    "    Neutral: 4965\n",
+    "    Sad: 4830\n",
+    "    Surprise: 3171\n",
+    "  \"\"\"\n",
+    "  samples_per_label = [3995, 436, 4097, 7215, 4965, 4830, 3171]\n",
+    "  total_samples = sum(samples_per_label)\n",
+    "  return dict([(i, total_samples/(7*j)) for (i,j) in enumerate(samples_per_label)]) \n",
+    "\n",
+    "class_weights = class_weight_computer()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Making Small CNN Network"
    ]
   },
   {
@@ -239,93 +330,11 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "id": "Agblokee2ABa"
-   },
-   "outputs": [],
-   "source": [
-    "# Image Data Generator setup\n",
-    "batch_size = 50\n",
-    "train_datagen = ImageDataGenerator(rescale=1./255,\n",
-    "                                   featurewise_center=False,\n",
-    "                                   featurewise_std_normalization=False,\n",
-    "                                   rotation_range=30,\n",
-    "                                   width_shift_range=0.1,\n",
-    "                                   height_shift_range=0.1,\n",
-    "                                   zoom_range=0.1,\n",
-    "                                   horizontal_flip=True\n",
-    "                                   )\n",
-    "validation_datagen = ImageDataGenerator(rescale=1./255)\n",
-    "test_datagen = ImageDataGenerator(rescale=1./255)\n",
-    "train_generator = train_datagen.flow_from_directory(\n",
-    "    train_dir,\n",
-    "    target_size = (img_height, img_width),\n",
-    "    batch_size = batch_size,\n",
-    "    shuffle = True,\n",
-    "    class_mode='categorical'\n",
-    ")\n",
-    "validation_generator = validation_datagen.flow_from_directory(\n",
-    "    validation_dir,\n",
-    "    target_size = (img_height, img_width),\n",
-    "    batch_size = batch_size,\n",
-    "    class_mode = 'categorical'\n",
-    ")\n",
-    "test_generator = test_datagen.flow_from_directory(\n",
-    "    test_dir,\n",
-    "    target_size = (img_height, img_width),\n",
-    "    batch_size = batch_size,\n",
-    "    class_mode = 'categorical'\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "J0Sy9nUvkPwB"
-   },
-   "outputs": [],
-   "source": [
-    "print(train_generator.class_indices)\n",
-    "print(validation_generator.class_indices)\n",
-    "print(test_generator.class_indices)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "vbEJtJtRxtM0"
-   },
-   "outputs": [],
-   "source": [
-    "def class_weight_computer():\n",
-    "  \"\"\"\n",
-    "  This function generates the class weights based on training data.\n",
-    "  \n",
-    "    Training Data categories and number of samples in them\n",
-    "    Angry: 3995\n",
-    "    Disgust: 436\n",
-    "    Fear: 4097\n",
-    "    Happy: 7215\n",
-    "    Neutral: 4965\n",
-    "    Sad: 4830\n",
-    "    Surprise: 3171\n",
-    "  \"\"\"\n",
-    "  samples_per_label = [3995, 436, 4097, 7215, 4965, 4830, 3171]\n",
-    "  total_samples = sum(samples_per_label)\n",
-    "  return dict([(i, total_samples/(7*j)) for (i,j) in enumerate(samples_per_label)]) \n",
-    "\n",
-    "class_weights = class_weight_computer()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
     "id": "kyDmy4jw2AB3"
    },
    "outputs": [],
    "source": [
+    "# Model Training\n",
     "EPOCHS = 50\n",
     "training_samples = 28709\n",
     "validation_samples = 3589\n",
