--- a/Notebooks_For_submission/1 Transfer learning with VGG16(Imagenet) on fer2013.ipynb
+++ b/Notebooks_For_submission/1 Transfer learning with VGG16(Imagenet) on fer2013.ipynb
@@ -191,6 +191,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Setting up Image generator with data augmentation"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -201,6 +208,88 @@
     "# Setting image height and width\n",
     "img_height = 224\n",
     "img_width = 224"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Image Data Generator setup\n",
+    "batch_size = 50\n",
+    "train_datagen = ImageDataGenerator(rescale=1./255,\n",
+    "                                   featurewise_center=False,\n",
+    "                                   featurewise_std_normalization=False,\n",
+    "                                   rotation_range=90,\n",
+    "                                   width_shift_range=0.1,\n",
+    "                                   height_shift_range=0.1,\n",
+    "                                   zoom_range=0.1,\n",
+    "                                   horizontal_flip=True\n",
+    "                                   )\n",
+    "validation_datagen = ImageDataGenerator(rescale=1./255)\n",
+    "test_datagen = ImageDataGenerator(rescale=1./255)\n",
+    "train_generator = train_datagen.flow_from_directory(\n",
+    "    train_dir,\n",
+    "    target_size = (img_height, img_width),\n",
+    "    batch_size = batch_size,\n",
+    "    shuffle = True,\n",
+    "    class_mode='categorical'\n",
+    ")\n",
+    "validation_generator = validation_datagen.flow_from_directory(\n",
+    "    validation_dir,\n",
+    "    target_size = (img_height, img_width),\n",
+    "    batch_size = batch_size,\n",
+    "    class_mode = 'categorical'\n",
+    ")\n",
+    "test_generator = test_datagen.flow_from_directory(\n",
+    "    test_dir,\n",
+    "    target_size = (img_height, img_width),\n",
+    "    batch_size = batch_size,\n",
+    "    class_mode = 'categorical'\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(train_generator.class_indices)\n",
+    "print(validation_generator.class_indices)\n",
+    "print(test_generator.class_indices)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def class_weight_computer():\n",
+    "  \"\"\"\n",
+    "    Training Data categories and number of samples in them\n",
+    "    Angry: 3995\n",
+    "    Disgust: 436\n",
+    "    Fear: 4097\n",
+    "    Happy: 7215\n",
+    "    Neutral: 4965\n",
+    "    Sad: 4830\n",
+    "    Surprise: 3171\n",
+    "  \"\"\"\n",
+    "  samples_per_label = [3995, 436, 4097, 7215, 4965, 4830, 3171]\n",
+    "  total_samples = sum(samples_per_label)\n",
+    "  return dict([(i, total_samples/(7*j)) for (i,j) in enumerate(samples_per_label)]) # https://scikit-learn.org/stable/modules/generated/sklearn.utils.class_weight.compute_class_weight.html\n",
+    "class_weights = class_weight_computer()\n",
+    "print(class_weights)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Loading pretrained model"
    ]
   },
   {
@@ -253,6 +342,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Adding Classifier on top of pretrained network"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -260,12 +356,12 @@
    },
    "outputs": [],
    "source": [
-    "from keras.layers import GlobalAveragePooling2D\n",
+    "from keras.layers import Flatten\n",
     "DROP_OUT_RATE = 0.5\n",
     "EPOCHS = 50\n",
     "last_layer = conv_base.output\n",
     "\n",
-    "x = GlobalAveragePooling2D(name='global_avg_pool_1')(last_layer)\n",
+    "x = Flatten(name='flatten')(last_layer)\n",
     "x = Dropout(DROP_OUT_RATE)(x)\n",
     "x = Dense(1024, activation='relu', name='fc1')(x)\n",
     "x = Dropout(DROP_OUT_RATE)(x)\n",
@@ -292,91 +388,11 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "id": "Agblokee2ABa"
-   },
-   "outputs": [],
-   "source": [
-    "# Image Data Generator setup\n",
-    "batch_size = 50\n",
-    "train_datagen = ImageDataGenerator(rescale=1./255,\n",
-    "                                   featurewise_center=False,\n",
-    "                                   featurewise_std_normalization=False,\n",
-    "                                   rotation_range=90,\n",
-    "                                   width_shift_range=0.1,\n",
-    "                                   height_shift_range=0.1,\n",
-    "                                   zoom_range=0.1,\n",
-    "                                   horizontal_flip=True\n",
-    "                                   )\n",
-    "validation_datagen = ImageDataGenerator(rescale=1./255)\n",
-    "test_datagen = ImageDataGenerator(rescale=1./255)\n",
-    "train_generator = train_datagen.flow_from_directory(\n",
-    "    train_dir,\n",
-    "    target_size = (img_height, img_width),\n",
-    "    batch_size = batch_size,\n",
-    "    shuffle = True,\n",
-    "    class_mode='categorical'\n",
-    ")\n",
-    "validation_generator = validation_datagen.flow_from_directory(\n",
-    "    validation_dir,\n",
-    "    target_size = (img_height, img_width),\n",
-    "    batch_size = batch_size,\n",
-    "    class_mode = 'categorical'\n",
-    ")\n",
-    "test_generator = test_datagen.flow_from_directory(\n",
-    "    test_dir,\n",
-    "    target_size = (img_height, img_width),\n",
-    "    batch_size = batch_size,\n",
-    "    class_mode = 'categorical'\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "J0Sy9nUvkPwB"
-   },
-   "outputs": [],
-   "source": [
-    "print(train_generator.class_indices)\n",
-    "print(validation_generator.class_indices)\n",
-    "print(test_generator.class_indices)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "vbEJtJtRxtM0"
-   },
-   "outputs": [],
-   "source": [
-    "def class_weight_computer():\n",
-    "  \"\"\"\n",
-    "    Training Data categories and number of samples in them\n",
-    "    Angry: 3995\n",
-    "    Disgust: 436\n",
-    "    Fear: 4097\n",
-    "    Happy: 7215\n",
-    "    Neutral: 4965\n",
-    "    Sad: 4830\n",
-    "    Surprise: 3171\n",
-    "  \"\"\"\n",
-    "  samples_per_label = [3995, 436, 4097, 7215, 4965, 4830, 3171]\n",
-    "  total_samples = sum(samples_per_label)\n",
-    "  return dict([(i, total_samples/(7*j)) for (i,j) in enumerate(samples_per_label)]) # https://scikit-learn.org/stable/modules/generated/sklearn.utils.class_weight.compute_class_weight.html\n",
-    "class_weights = class_weight_computer()\n",
-    "print(class_weights)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
     "id": "kyDmy4jw2AB3"
    },
    "outputs": [],
    "source": [
+    "# Model training\n",
     "EPOCHS = 50\n",
     "training_samples = 28709\n",
     "validation_samples = 3589\n",
@@ -489,7 +505,24 @@
     "id": "G3ZSxwX116bU"
    },
    "source": [
-    "Fine tuning the last Convolutional layer"
+    "### Fine tuning the last Convolutional layer"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Image generators and data preparation codes are pre-loaded before the below session"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from keras.models import load_model\n",
+    "model = load_model(\"drive/My Drive/ENGR635-Deep Learning System Design Project/Models/VGG16_Imagenet/VGG16-EPOCHS_50val_acc_0.308.h5\")"
    ]
   },
   {
@@ -641,7 +674,25 @@
     "id": "osMkwm-C2D0e"
    },
    "source": [
-    "Fine tuning the last two Convolutional layer"
+    "### Fine tuning the last two Convolutional layer"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Image generators and data preparation codes are pre-loaded before the below session"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Loading the saved model\n",
+    "from keras.models import load_model\n",
+    "model = load_model(\"drive/My Drive/ENGR635-Deep Learning System Design Project/Models/VGG16_Imagenet/VGG16-EPOCHS_50val_acc_0.315.h5\")"
    ]
   },
   {
@@ -705,6 +756,7 @@
    },
    "outputs": [],
    "source": [
+    "# Model training\n",
     "EPOCHS = 50\n",
     "history = model.fit_generator(\n",
     "    train_generator,\n",
@@ -790,26 +842,28 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "id": "ZVuiL5ZE2R-Q"
+    "id": "_6ovSSxH2PjS"
    },
    "source": [
-    "\n",
-    "\n",
-    "---\n",
-    "\n",
-    "\n",
-    "\n",
-    "---\n",
-    "\n"
+    "### Fine tuning the last three Convolutional layer"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "_6ovSSxH2PjS"
-   },
+   "metadata": {},
    "source": [
-    "Fine tuning the last three Convolutional layer"
+    "Image generators and data preparation codes are pre-loaded before the below session"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Loading the saved model\n",
+    "from keras.models import load_model\n",
+    "model = load_model(\"drive/My Drive/ENGR635-Deep Learning System Design Project/Models/VGG16_Imagenet/VGG16-EPOCHS_50val_acc_0.325.h5\")"
    ]
   },
   {
@@ -873,6 +927,7 @@
    },
    "outputs": [],
    "source": [
+    "# Model training\n",
     "EPOCHS = 50\n",
     "history = model.fit_generator(\n",
     "    train_generator,\n",
